Ads integrated success

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="b_pholder">B : </string>
     <string name="c_pholder">C : </string>
     <string name="d_pholder">D : </string>
+    <string name="description">A quiz is a form of game or mind sport, in which the players (as individuals or in teams) attempt to answer questions correctly. It is a game to test your knowledge about a certain subject</string>
 </resources>
